[workspace]
members = [
    "qcell", "qcell/bench", "qcell/nopanic", "qcell/san",
    "qini",
    "qjson", "qjson/bench", "qjson/fuzz", "qjson/nopanic",
    "qptr", "qptr/nopanic", "qptr/san",
]
default-members = ["qcell", "qini", "qjson", "qptr"]

[profile.bench]
debug = true

[profile.nopanic]
inherits = "release"
panic = "abort"
