[workspace]
members = [
    "qbump",
    "qcell", "qcell/bench", "qcell/nopanic", "qcell/san",
    "qini",
    "qjson", "qjson/bench", "qjson/fuzz", "qjson/nopanic",
    "qptr", "qptr/nopanic", "qptr/san",
]
default-members = ["qbump", "qcell", "qini", "qjson", "qptr"]

[profile.bench]
debug = true

[profile.nopanic]
inherits = "release"
panic = "abort"
